style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  line-height: 1;
  margin: 0;
}

ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

html {
  box-sizing: border-box;
  background-image: url(assets/background-noise.webp);
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

.dashboard-container {
  display: grid;
  grid-template-columns: auto 2fr;
  grid-template-rows: 10rem 2fr;
  width: 105rem;
  height: 58rem;
  flex-shrink: 0;
  border: 0.5px solid rgba(255, 255, 255, 0.58);
  border-radius: 20px;
  background: rgba(255, 255, 255, 0.17);
  backdrop-filter: blur(4.400000095367432px);
  margin: 0 auto;
}

.side-bar {
  display: grid;
  grid-column: 1 / 2;
  grid-row: 1 / end;
  grid-template-columns: 1fr;
  grid-template-rows: 10em 2fr;
  place-items: center;
  width: 26.3125rem;
  height: 100%;
  flex-grow: 1;
  border-radius: 1.25rem 0rem 0rem 1.25rem;
  background: #121415;
  padding-bottom: 2em;
}

.logo-container {
  display: flex;
  align-items: center;
  gap: 0.81rem;
}

.logo-container > h1 {
  color: #e8e8e8;
  font-family: "Teko";
  font-size: 3rem;
  font-style: normal;
  font-weight: 700;
  letter-spacing: 0.1rem;
}

li {
  color: #fff;
  font-family: "Archivo";
  font-size: 1.2rem;
  font-style: normal;
  font-weight: 500;
}

.side-bar-nav {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 6em;
}

.top-nav-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex-grow: 1;
  gap: 3em;
}

.bottom-nav-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex-grow: 1;
  gap: 2em;
}

.top-nav-container > li,
.bottom-nav-container > li {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 1em;
  flex-grow: 1;
}

.profile-container {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1em;
}

.profile-container > p {
  color: #fff;
  font-family: Archivo;
  font-size: 1.5rem;
  font-style: normal;
  font-weight: 500;
}

a {
  text-decoration: none;
  color: #fff;
}

.header {
  grid-column: 2 / end;
  grid-row: 1/2;
  border: 1px solid red;
  display: grid;
  grid-template-columns: auto 2fr auto;
  grid-auto-flow: column;
  padding: 2rem;
}

.greeting-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.greeting-container > h1 {
  color: #fff;
  font-family: Archivo;
  font-size: 2rem;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

.greeting-container > p {
  color: #a3a3a3;
  font-family: Roboto;
  font-size: 1rem;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

.search-bar {
  width: 18.75rem;
  height: 3.125rem;
  flex-shrink: 0;
  border-radius: 0.625rem;
  background: #121415;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1em;
}

.search-bar > p {
  color: #a3a3a3;
  font-family: Archivo;
  font-size: 1rem;
  font-style: normal;
  font-weight: 500;
}

.options-container {
  display: flex;
  align-items: center;
  gap: 1em;
}

.options-container > .icon-container {
  width: 3.125rem;
  height: 3.125rem;
  flex-shrink: 0;
  border-radius: 0.625rem;
  background: #121415;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1em;
}

.search-bar-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.main-container {
  display: grid;
  grid-template-columns: 3fr auto;
  grid-template-rows: auto 2fr;
  border: 1px solid red;
  gap: 1em;
}

.top-assets-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 43.875rem;
  height: 10rem;
  flex-shrink: 0;
  border-radius: 0.625rem;
  background: #121415;
  box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.2);
  border: 1px solid red;
  padding: 2em;
}

.price-container > h2 {
  color: #fff;
  font-family: Archivo;
  font-size: 1rem;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

.asset-title > h1 {
  color: #fff;
  font-family: Archivo;
  font-size: 1rem;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

.asset-title {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5em;
}

.asset-container:first-child > p {
  color: #c13737;
  font-family: Archivo;
  font-size: 0.75rem;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

.asset-container > p {
  color: #4ef400;
  font-family: Archivo;
  font-size: 0.75rem;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

.asset-container p:last-child {
  justify-self: flex-end;
  grid-column: 2 / end;
}

.asset-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 2fr auto auto;
  gap: 1em;
}

.price-container {
  grid-column: 1 / end;
  display: flex;
  justify-content: space-between;
}

.asset-container > .asset-title {
  grid-column: 1 / end;
}

.asset-container > h2 + img {
  grid-column: 2 / end;
}

.asset-container > :nth-child(2) {
  grid-column: 1 / end;
}

.chart-container {
  grid-column: 1 / 3;
  width: 43.875rem;
  height: 21.5625rem;
  flex-shrink: 0;
  border-radius: 0.625rem;
  background: #121415;
  box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.2);
}

button > p {
  font-family: Roboto;
  font-size: 1.25rem;
  font-style: normal;
  font-weight: 500;
}

.trading-btns-container button:first-child {
  color: #fbd643;
  width: 6.875rem;
  height: 3.125rem;
  flex-shrink: 0;
  border-radius: 0.625rem;
  background: #121415;
  box-shadow: 0px 0px 0.17995312809944153px 0px #ffde05,
    0px 0px 0.35990625619888306px 0px #ffde05,
    0px 0px 1.259671926498413px 0px #ffde05,
    0px 0px 2.519343852996826px 0px #ffde05,
    0px 0px 4.318874835968018px 0px #ffde05,
    0px 0px 7.55803108215332px 0px #ffde05;
}

.trading-btns-container button:nth-last-child(-n + 2) {
  width: 6.25rem;
  height: 3.125rem;
  flex-shrink: 0;
  border-radius: 0.625rem;
  background: #121415;
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
}

.trading-btns-container button:nth-child(2) {
  color: #9bff6c;
}

.trading-btns-container button:last-child {
  color: #d24343;
}

.trade-panel {
  width: 21.8125rem;
  height: 12.0625rem;
  flex-shrink: 0;
  border-radius: 0.625rem;
  background: #121415;
  box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
}

